--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6",
         "yiisoft/yii2": "^2.0.20"
     },
     "autoload": {
@@ -23,10 +24,16 @@
         }
     },
     "require-dev": {
+        "yiisoft/yii2-queue": "~2.0.2",
         "codeception/codeception": "^4.1",
         "codeception/module-asserts": "^1.0.0",
         "codeception/module-yii2": "^1.0",
         "codeception/module-db": "^1.0.1"
+    },
+    "config": {
+        "platform": {
+            "php": "5.6"
+        }
     },
     "repositories": [
         {
